# clox

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  clox.c  makefile
apps/: CMakeLists.txt  main.c
include/: chunk.h  common.h  memory.h
include/clox/: attributes.h  chunk.h  common.h  compiler.h  debug.h  line.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
source/: CMakeLists.txt  chunk.c  compiler.c  debug.c  line.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
src/: chunk.c  memory.c
tests/: CMakeLists.txt  test_clox.c
